--- a/Asignacion2_247283/CV_FranciscoBaez/index.html
+++ b/Asignacion2_247283/CV_FranciscoBaez/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Currículum Vitae</title>
 </head>
-<body>
+<body style="margin: 50px;">
     <header>
         <h1>HÉCTOR FRANCISCO BÁEZ LUQUE</h1>
         <sub><p>CURRÍCULUM VITAE</p></sub>
@@ -103,7 +103,7 @@
         <h3 id="contacto">Datos de contacto:</h3>
         <ul>
             <li>Número de teléfono: 6442361814</li>
-            <li>Correo electrónico: pacobaez3123@gmail.com</li>
+            <li>Correo electrónico: <a href="mailto:pacobaez3123@gmail.com">pacobaez3123@gmail.com</a> </li>
         </ul>
         <p>Ciudad Obregón, Sonora a Septiembre de 2024</p>
     </footer>
