Actualizar chambas anteriores

--- a/Asignacion2_247283/CV_FranciscoBaez/index.html
+++ b/Asignacion2_247283/CV_FranciscoBaez/index.html
@@ -39,6 +39,9 @@
             <h2 id="expLaboral"><strong>Experiencia laboral</strong></h2>
             <ul>
                 <li>IDT Tecnologías: Soporte técnico (2024).</li>
+                <li>Gamestar: Cajero y atención a cliente (2024).</li>
+                <li>Abarrotes Yucatán (Cerrado en 2022)</li>
+                <li>Publistar: Volantero (2021-2023)</li>
             </ul>
             <br/>
         </div>
