--- a/Asignacion2_247283/CV_FranciscoBaez/index.html
+++ b/Asignacion2_247283/CV_FranciscoBaez/index.html
@@ -9,7 +9,7 @@
 <body style="margin: 50px;">
     <header>
         <h1>HÉCTOR FRANCISCO BÁEZ LUQUE</h1>
-        <sub><p>CURRÍCULUM VITAE</p></sub>
+        <sub><p><span style="color: blue;">CURRÍCULUM VITAE</span></p></sub>
         <nav>
             <ol type="a">
                 Contenido:
@@ -24,17 +24,23 @@
     </header>
     <main>
         <br/>
-        <h2>Presentación</h2>
-        <div>
-            <img src="/assets/imgs/Yo - CV.jpg" alt="Yo" style="width: 30%;height: 30%;">
-        </div>
-        
-        <br/>
-        <br/>
-        <strong>Estudiante de Ingeniería en Software. Cuento con 19 años.
-            <br/>Me considero una persona responsable y resiliente.</strong>
+        <section>
+            <h2>Presentación</h2>
+            <div>
+                <img src="/assets/imgs/Yo - CV.jpg" alt="Yo" style="width: 30%;height: 30%;">
+            </div>
+            
+            <br/>
+            <br/>
+            <strong>Estudiante de Ingeniería en Software. Cuento con 19 años.</strong>
+            <hr> 
+                <br/>
+                <p>Me considero una persona responsable y resiliente.</p>
+                <p>Originario de Ciudad Obregón.</p>
+                <iframe id="mapa" width="300px" height="300px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56631.121571915515!2d-109.94261074999999!3d27.48652975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86c815e1cb75ffb9%3A0x311f38aacd3515ae!2sCdad.%20Obreg%C3%B3n%2C%20Son.!5e0!3m2!1ses!2smx!4v1726170507226!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+        </section>
 
-        <div>
+        <section>
             <br/>
             <h2 id="expLaboral"><strong>Experiencia laboral</strong></h2>
             <ul>
@@ -44,9 +50,9 @@
                 <li>Publistar: Volantero (2021-2023)</li>
             </ul>
             <br/>
-        </div>
+        </section>
 
-        <div>
+        <section>
             <h2 id="estudios"><strong>Estudios</strong></h2>
             <ul>
                 <li>INSTITUTO TECNOLÓGICO DE SONORA</li>
@@ -62,18 +68,18 @@
                 </ul>
             </ul>
             <br/>
-        </div>
+        </section>
 
-        <div>
+        <section>
             <h2 id="idiomas"><strong>Idiomas</strong></h2>
             <ul>
                 <li>Español nativo</li>
                 <li>Inglés B2</li>
             </ul>
             <br/>
-        </div>
+        </section>
 
-        <div>
+        <section>
             <h2 id="herramientasSW"><strong>Herramientas de software</strong></h2>
             <ul>
                 <li>Manejo de paquetería de office.</li>
@@ -83,9 +89,9 @@
                 <li>Progamación de aplicaciones móviles por bloques con bases de datos.</li>
             </ul>
             <br/>
-        </div>
+        </section>
 
-        <div>
+        <section>
             <h2 id="voluntariado"><strong>Voluntariado</strong></h2>
             <ul>
                 <li>ASOCIACIÓN DE SCOUTS DE MÉXICO</li>
@@ -100,7 +106,7 @@
                 </ul>
             </ul>
             <br/>
-        </div>
+        </section>
     </main>
     <footer>
         <h3 id="contacto">Datos de contacto:</h3>
